applications/parca/middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: parca
  name: parca-whitelist
spec:
  ipWhiteList:
    sourceRange:
      - 10.0.0.0/8 # internal IP range
      - 172.16.0.0/12 # internal IP range
      - 192.168.0.0/16 # internal IP range
      - 100.64.0.0/10 # Tailscale VPN
