applications/parca/parca-agent.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/component: observability
    app.kubernetes.io/instance: parca-agent
    app.kubernetes.io/name: parca-agent
    app.kubernetes.io/version: v0.39.1
  name: parca-agent
  namespace: parca
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: observability
      app.kubernetes.io/instance: parca-agent
      app.kubernetes.io/name: parca-agent
  template:
    metadata:
      labels:
        app.kubernetes.io/component: observability
        app.kubernetes.io/instance: parca-agent
        app.kubernetes.io/name: parca-agent
        app.kubernetes.io/version: v0.39.1
    spec:
      containers:
        - args:
            - --http-address=:7071
            - --node=$(NODE_NAME)
            - --config-path=/etc/parca-agent/parca-agent.yaml
            - --remote-store-address=parca.parca.svc.cluster.local:7070
            - --remote-store-insecure
          image: ghcr.io/parca-dev/parca-agent:v0.39.1
          name: parca-agent
          ports:
            - containerPort: 7071
              name: http
          resources: {}
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /run
              name: run
            - mountPath: /boot
              name: boot
              readOnly: true
            - mountPath: /lib/modules
              name: modules
            - mountPath: /sys/kernel/debug
              name: debugfs
            - mountPath: /sys/fs/cgroup
              name: cgroup
            - mountPath: /sys/fs/bpf
              name: bpffs
            - mountPath: /etc/parca-agent
              name: config
            - mountPath: /var/run/dbus/system_bus_socket
              name: dbus-system
      hostPID: true
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: parca-agent
      tolerations:
        - operator: Exists
      volumes:
        - emptyDir: {}
          name: tmp
        - hostPath:
            path: /run
          name: run
        - hostPath:
            path: /boot
          name: boot
        - hostPath:
            path: /sys/fs/cgroup
          name: cgroup
        - hostPath:
            path: /lib/modules
          name: modules
        - hostPath:
            path: /sys/fs/bpf
          name: bpffs
        - hostPath:
            path: /sys/kernel/debug
          name: debugfs
        - configMap:
            name: parca-agent
          name: config
        - hostPath:
            path: /var/run/dbus/system_bus_socket
          name: dbus-system
